# transformers_figuring_out

./: README.md  pyproject.toml
.github/workflows/: tests.yml
src/layers/: layer.py  linear.py
src/test/layers/: test_linear.py
src/utils/: weigths_initialization.py
